# bwinf_21-22_2

./: .gitignore  Cargo.toml  README.md  Untitled-1.ipynb  pyproject.toml
Aufgaben/Aufgabe3/: Cargo.toml
Aufgaben/Aufgabe3/ausgaben/: ausgabe2.txt  ausgabe6.txt  ausgabe7.txt
Aufgaben/Aufgabe3/eingaben/: chars.json  chars_binary.json  eingabe6.txt  eingabe7.txt
Aufgaben/Aufgabe3/src/: io.rs  main.rs  processing.rs  testing.rs  visu.py
Aufgaben/BonusAufgabe/: Cargo.toml  README.txt
Aufgaben/BonusAufgabe/ausgaben/: ausgabe0.txt  ausgabe2.txt  ausgabe3.txt  ausgabe4.txt  ausgabe5.txt
Aufgaben/BonusAufgabe/old/: README.txt  additional.rs  exp1.rs  exp2.rs  exp3.rs  exp4.rs  main.rs  v1.rs
Aufgaben/BonusAufgabe/src/: client.rs  io.rs  lib.rs  main.rs  server.rs  testing.rs
Latex/: Aufgabe3.ltx  BonusAufgabe.ltx
eingaben/Aufgabe1-Muellabfuhr/: muellabfuhr0-ans.txt
notebooks/: a3.ipynb
proto/Aufgabe3/: TODO  aufgabe3.py  aufgabe3_2.py  chars.json  common.py  common.rs  main.rs
proto/Aufgabe3/ausgaben/: ausgabe0.txt  ausgabe1.txt  ausgabe2.txt  ausgabe3.txt  ausgabe4.txt  ausgabe5.txt
proto/Aufgabe3/benchmarks/: runtimes.txt  runtimes1.txt
proto/Aufgabe3/src/: common.rs  io.rs  lib.rs  main.rs  main2.rs  processing.rs  testing.rs  visu.py  visu2.py
proto/Aufgabe4/: Cargo.toml  common.rs  exp1.rs  exp2.rs  exp3.rs  exp4.rs  main.rs  v1.rs
proto/Aufgabe4/src/: common.rs  exp1.rs  exp2.rs  exp4.rs  v1.rs
proto/BonusAufgabe_distributed/: Cargo.toml  TODO:  main.py  pyproject.toml
proto/BonusAufgabe_distributed/src/: client.rs  lib.rs  main.rs  server.rs
proto/BonusAufgabe_proto/: Cargo.toml  TODO
proto/BonusAufgabe_proto/ausgaben/: ausgabe0.txt  ausgabe1.txt  ausgabe2.txt  ausgabe5.txt
proto/BonusAufgabe_proto/src/: additional.rs  benchmarks.rs  generate.py  io.rs  lib.rs  main.rs  math.rs  processing.rs  structs.rs  testing.rs
proto/Bonusaufgabe/: Cargo.toml
proto/Bonusaufgabe/ausgaben/: ausgabe0.txt  ausgabe2.txt
proto/Bonusaufgabe/src/: io.rs  lib.rs  main.rs  math.rs  processing.rs  structs.rs  testing.rs
qtest/: qtest4.py
