[package]
name = "BonusAufgabe_distributed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
BonusAufgabe_proto = { path = "../BonusAufgabe_proto" }
bytes = "1.1.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.79"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"